# GVRDP

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: CompilerWarnings.cmake  Platform.cmake
src/: CMakeLists.txt  main.cpp
src/channels/: channel_interface.hpp  cliprdr_channel.cpp  cliprdr_channel.hpp  disp_channel.cpp  disp_channel.hpp  rdpdr_channel.cpp  rdpdr_channel.hpp  rdpsnd_channel.cpp  rdpsnd_channel.hpp
src/config/: app_config.cpp  app_config.hpp  connection_profile.cpp  connection_profile.hpp  profile_store.cpp  profile_store.hpp
src/core/: rdp_callbacks.cpp  rdp_callbacks.hpp  rdp_channels.cpp  rdp_channels.hpp  rdp_context.hpp  rdp_error.hpp  rdp_session.cpp  rdp_session.hpp  rdp_settings.cpp  rdp_settings.hpp
src/input/: input_handler.cpp  input_handler.hpp  keyboard_map.cpp  keyboard_map.hpp
src/render/: sdl_cursor.cpp  sdl_cursor.hpp  sdl_renderer.cpp  sdl_renderer.hpp
src/ui/: connection_dialog.cpp  connection_dialog.hpp  profile_manager_dialog.cpp  profile_manager_dialog.hpp  settings_dialog.cpp  settings_dialog.hpp  ui_manager.cpp  ui_manager.hpp
src/util/: debouncer.cpp  debouncer.hpp  logger.cpp  logger.hpp  platform.hpp  thread_safe_queue.hpp
tests/: CMakeLists.txt  test_connection_profile.cpp  test_debouncer.cpp  test_keyboard_map.cpp
